  directly so that "all" will work.
- $actor->{casting} now tracks what spell someone is casting on what target,
  and is cleared correctly when the spell completes/is interrupted.
- New hook packet_item_removed.
- All commands have been moved to Commands.pm.
- New plugin hook "player" passes a player object when "Player Appears"
  or "Player Exists".

Credits:
- Damokles: case sensitivity fix, avoidGM_namePattern, skillsstatus.txt help.
- kunjandad: friend list packet support.
- Crypticode: 'ai on'/'ai off' commands; item name support in 'uneq' command.
- punkpudding: route_teleport_notInMaps.
- Sinistral: skillsstatus.txt help.
- Hakore: avoidGM_near_inTown fix.
- TJ09: Einbroch fields.
- kaliwanagan: 'selfSkill' domain.

==================
### 1.6.1
==================

*** INCOMPATIBLE CHANGES ***:
- teleportAuto_useSP is now obsolete my teleportAuto_useSkill.
- The _inInventory directive has changed. See below.

Bug fixes:
- Logging framework: writing messages to files should work again.
- Correct write to servers.txt for version search.
- Fix lockMap_randX/Y. lockMap_x/y acting as the top right corner of the
  rectangle. This is now treated as the center of the rectangle.
- Stopped the annoying "Attempted to use skill you do not have."
  messages by moving the message from error to debug.
- Fix autoBreakTime not working on some systems.
- Fix 'store desc <num>' command.
- Don't spam the teleport packet when you're not on one of the maps in
  allowedMaps. Only attempt to teleport up to 3 times, because some maps
  don't allow teleport.
- Fix a bug with empty partySkill blocks messing up partySkill.
- Static mode in the Console::Other interface now works correctly.
- Correctly strip language code from party chat.
- When someone in your avoid list sends you a PM, Kore will crash.
- Only clear AI if teleport succeeded.
- Fix a bug which causes monster IDs to end up in the player hash.
- Correctly move to a monster when using an attack skill if